# pdf-analyze-streamlit

./: .env.example  .gitignore  IMPLEMENTATION_PLAN.md  IMPROVEMENTS_SUMMARY.md  README.md  benchmark.py  benchmark_full.py  benchmark_mock.py  check_jobs.py  pyproject.toml  pyrightconfig.json  qa_app.py  requirements.txt  ruff.toml  scratch_chroma_check.py  scratch_db_check.py  scratch_ws_check.py  test_check_files.py  test_check_jobs.py  test_chroma.py  test_db_import.py  test_embedding.py  test_import.py  test_jobs.py  test_jobs_db.py  test_qa_app.py  verify_improvements.py
.github/workflows/: ci.yml
.streamlit/: config.toml
app/: .env.example  README.md  __init__.py  main.py
app/core/: __init__.py  cache.py  chroma.py  config.py  constants.py  container.py  database.py  exceptions.py  health.py  jobs.py  loader.py  locales.py  logger.py  models.py  prompts.py  rag.py  rate_limiter.py  router.py  sanitizer.py
app/core/repositories/: __init__.py  interfaces.py  sqlite_repositories.py
app/core/services/: __init__.py  chat_service.py  file_service.py
app/ui/: __init__.py  callbacks.py  chat.py  dashboard.py  dialogs.py  header.py  layout.py  settings_components.py  sidebar.py  state.py  upload.py  utils.py  workspace.py
app/ui/pages/: analysis_page.py  chat_page.py  knowledge_page.py  library_page.py  settings_page.py
chroma_db/: chroma.sqlite3
data/: app.db
db_migrations/: env.py
db_migrations/versions/: 5e3c5f157425_init.py
tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_exceptions.py  test_loader.py  test_models.py  test_rate_limiter.py  test_retriever.py  test_sanitizer.py
tests/integration/: scratch_embedding.py  scratch_jobs_db.py  test_chroma.py  test_db_import.py
tests/tools/: test_check_files.py  test_check_jobs.py  test_import.py  test_jobs.py
tests/unit/: test_loader.py  test_models.py  test_sanitizer.py
